--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 input {
   font-family: "Gaegu", cursive;
 }
@@ -98,7 +97,7 @@ input {
 }
 
 .cardContainer:hover {
- box-shadow: 0 0 10px #aeaeae;
+  box-shadow: 0 0 10px #aeaeae;
 }
 
 .handleCardButton {
@@ -108,7 +107,7 @@ input {
 }
 
 .cardContainer:hover > .handleCardButton {
-  display: flex;
+  display: block;
   left: 70%;
   color: #ec5656;
   font-size: 24px;
